# openai-email-digest

./: .gitignore  LICENSE  README.md  app.py  build.py  pyproject.toml
digest_emails/: watchdog_example.py
vba/: modEmails.bas
